<resources>
    <string name="app_name">WSClient</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btn_insert">Create</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="tip_name">Insert your name</string>
    <string name="tip_email">Insert your email</string>
    <string name="tip_password">Insert your password</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_pasword">Invalid password</string>
</resources>
